--- a/index.html
+++ b/index.html
@@ -7,12 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./modules/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./public/css/global.css">
+    <link rel="stylesheet" href="./public/css/navigate.css">
+    <link rel="stylesheet" href="./public/css/footer.css">
 </head>
 
 <body>
+    <div id="app">
+        <header>
+            <navigate :links="navLinks"></navigate>
+        </header>
+
+        <section>
+            <profile :user="user"></profile>
+        </section>
+
+        <footer>
+            <foot :logo="pucLogo"></foot>
+        </footer>
+    </div>
 
     <script src="./modules/js/bootstrap.bundle.min.js"></script>
-    <script src="./modules/js/vue.js"></script>
+    <script src="./modules/js/vueDev.js"></script>
+    <script src="./public/js/components.js"></script>
+    <script src="./public/js/app.js"></script>
+    <script src="./public/js/utils.js"></script>
 </body>
 
 </html>
