--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./public/css/navigate.css">
     <link rel="stylesheet" href="./public/css/profile.css">
     <link rel="stylesheet" href="./public/css/projects.css">
+    <link rel="stylesheet" href="./public/css/experiences.css">
     <link rel="stylesheet" href="./public/css/footer.css">
 </head>
 
@@ -23,6 +24,7 @@
         <section>
             <profile :user="user"></profile>
             <projects :projects="toRenderProjects" :types="projectsFilterTypes"></projects>
+            <experience :experiences="experiences"></experience>
         </section>
 
         <footer>
