Habilitando modo produção

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <script src="./modules/js/bootstrap.bundle.min.js"></script>
-    <script src="./modules/js/vueDev.js"></script>
+    <script src="./modules/js/vue.js"></script>
     <script src="./public/js/env.js"></script>
     <script src="./public/js/components.js"></script>
     <script src="./public/js/app.js"></script>
