--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <contents :contents="contents"></contents>
         </section>
 
-        <footer>
+        <!-- <footer>
             <foot :logo="pucLogo"></foot>
-        </footer>
+        </footer> -->
 
         <div class="modal" tabindex="-1" id="appModal">
             <modal :selectedproject="selectedProject"></modal>
