implementando integrações com API do GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div id="app">
         <header>
-            <navigate :links="navLinks" v-bind:searchinput="searchValue"></navigate>
+            <navigate :links="navLinks" v-bind:searchinput="searchValue" :resultList="searchResults"></navigate>
         </header>
 
         <section>
