--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </div>
     </div>
 
+    <script src="./modules/js/aes.min.js"></script>
     <script src="./modules/js/bootstrap.bundle.min.js"></script>
     <script src="./modules/js/vue.js"></script>
     <script src="./public/js/env.js"></script>
